--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,16 @@ authors = ["Matthew Field <matthew.field@ukaea.uk>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">=3.10,<3.13"
 simvue = {git = "https://github.com/simvue-io/client.git", rev = "v1.0-rc"}
 
 [tool.poetry.group.tensorflow.dependencies]
 tensorflow = "^2.16.1"
 mnist = "^0.2.2"
+
+
+[tool.poetry.group.moose.dependencies]
+ukaea-multiparser = "^1.0.1"
 
 [build-system]
 requires = ["poetry-core"]
