--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,22 @@
 [tool.poetry]
 name = "simvue-integrations"
-version = "1.0.0"
+version = "0.1.0"
 description = ""
 authors = ["Matthew Field <matthew.field@ukaea.uk>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.9"
-simvue = {git = "https://github.com/simvue-io/client.git", rev = "v1.0-rc3"}
+python = ">=3.10,<3.13"
 
-[tool.poetry.group.tensorflow.dependencies]
-tensorflow = "^2.16.1"
-matplotlib = "^3.9.0"
+tensorflow = {version="^2.16.1", optional=true}
+mnist = {version="^0.2.2", optional=true}
+ukaea-multiparser = {version="^1.0.1", optional=true}
+simvue = "^1.0.0"
 
+
+[tool.poetry.extras]
+tensorflow = ["tensorflow", "mnist"]
+moose = ["ukaea-multiparser"]
 
 [build-system]
 requires = ["poetry-core"]
