--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,13 +8,12 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = ">=3.10,<3.13"
 simvue = "^1.0.0"
+ukaea-multiparser = "^1.0.1"
 tensorflow = {version="^2.16.1", optional=true}
 mnist = {version="^0.2.2", optional=true}
-ukaea-multiparser = {version="^1.0.1", optional=true}
 
 [tool.poetry.extras]
 tensorflow = ["tensorflow", "mnist"]
-moose = ["ukaea-multiparser"]
 
 [build-system]
 requires = ["poetry-core"]
