--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ include = ["extras/fds_unlim"]
 
 [tool.poetry.dependencies]
 python = ">=3.10,<3.13"
-simvue = { git = "https://github.com/simvue-io/client.git", branch = "wk9874/add_subprocess_cwd", develop = true}
+simvue = { git = "https://github.com/simvue-io/client.git", branch = "wk9874/add_subprocess_cwd" }
 ukaea-multiparser = "^1.0.1"
 tensorflow = {version="^2.16.1", optional=true}
 mnist = {version="^0.2.2", optional=true}
