--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ fds = ["f90nml"]
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
+pytest-cov = "^5.0.0"
 
 [build-system]
 requires = ["poetry-core"]
