--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ include = ["extras/fds_unlim"]
 
 [tool.poetry.dependencies]
 python = ">=3.10,<3.13"
-simvue = { git = "https://github.com/simvue-io/python-api.git", branch = "dev" }
+simvue = "^1.1.0"
 ukaea-multiparser = "^1.0.2"
 tensorflow = {version="^2.16.1", optional=true}
 mnist = {version="^0.2.2", optional=true}
@@ -20,7 +20,6 @@ fds = ["f90nml"]
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
-pytest-cov = "^5.0.0"
 
 [build-system]
 requires = ["poetry-core"]
