--- a/.github/workflows/test_integration.yml
+++ b/.github/workflows/test_integration.yml
@@ -28,7 +28,8 @@ jobs:
           export SIMVUE_URL=${{ secrets.SIMVUE_URL }}
           export SIMVUE_TOKEN=${{ secrets.SIMVUE_TOKEN }}
           poetry install -E fds -E test
-          poetry run pytest tests/integration/test_fds.py
+      - name: Run test
+        run: poetry run pytest tests/integration/test_fds.py
   MOOSE:
     runs-on: ubuntu-latest
     container:
@@ -42,11 +43,13 @@ jobs:
           export SIMVUE_URL=${{ secrets.SIMVUE_URL }}
           export SIMVUE_TOKEN=${{ secrets.SIMVUE_TOKEN }}
           poetry install -E test
-          poetry run pytest tests/integration/test_moose.py
+      - name: Run test
+        run: poetry run pytest tests/integration/test_moose.py
   OpenFOAM:
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/simvue-io/openfoam_example
+      options: --user root
     steps:
       - uses: actions/checkout@v4
       - name: Install poetry
@@ -56,7 +59,8 @@ jobs:
           export SIMVUE_URL=${{ secrets.SIMVUE_URL }}
           export SIMVUE_TOKEN=${{ secrets.SIMVUE_TOKEN }}
           poetry install -E test
-          poetry run pytest tests/integration/test_openfoam.py
+      - name: Run test
+        run: poetry run pytest tests/integration/test_openfoam.py
   TensorFlow:
     runs-on: ubuntu-latest
     steps:
@@ -68,4 +72,5 @@ jobs:
           export SIMVUE_URL=${{ secrets.SIMVUE_URL }}
           export SIMVUE_TOKEN=${{ secrets.SIMVUE_TOKEN }}
           poetry install -E tensorflow -E test
-          poetry run pytest tests/integration/test_openfoam.py
+      - name: Run test
+        run: poetry run pytest tests/integration/test_tensorflow.py
