--- a/.github/workflows/test_integration.yml
+++ b/.github/workflows/test_integration.yml
@@ -28,8 +28,7 @@ jobs:
           export SIMVUE_URL=${{ secrets.SIMVUE_URL }}
           export SIMVUE_TOKEN=${{ secrets.SIMVUE_TOKEN }}
           poetry install -E fds -E test
-      - name: Run test
-        run: poetry run pytest tests/integration/test_fds.py
+          poetry run pytest tests/integration/test_fds.py
   MOOSE:
     runs-on: ubuntu-latest
     container:
@@ -38,13 +37,12 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install poetry
         run: python -m pip install poetry
-      - name: Install dependencies
+      - name: Install dependencies and run tests
         run: |
           export SIMVUE_URL=${{ secrets.SIMVUE_URL }}
           export SIMVUE_TOKEN=${{ secrets.SIMVUE_TOKEN }}
           poetry install -E test
-      - name: Run test
-        run: poetry run pytest tests/integration/test_moose.py
+          poetry run pytest tests/integration/test_moose.py
   OpenFOAM:
     runs-on: ubuntu-latest
     container:
@@ -54,23 +52,21 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install poetry
         run: pip install poetry
-      - name: Install dependencies
+      - name: Install dependencies and run tests
         run: |
           export SIMVUE_URL=${{ secrets.SIMVUE_URL }}
           export SIMVUE_TOKEN=${{ secrets.SIMVUE_TOKEN }}
           poetry install -E test
-      - name: Run test
-        run: poetry run pytest tests/integration/test_openfoam.py
+          poetry run pytest tests/integration/test_openfoam.py
   TensorFlow:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - name: Install poetry
         run: pip install poetry
-      - name: Install dependencies
+      - name: Install dependencies and run tests
         run: |
           export SIMVUE_URL=${{ secrets.SIMVUE_URL }}
           export SIMVUE_TOKEN=${{ secrets.SIMVUE_TOKEN }}
           poetry install -E tensorflow -E test
-      - name: Run test
-        run: poetry run pytest tests/integration/test_tensorflow.py
+          poetry run pytest tests/integration/test_tensorflow.py
