--- a/.github/workflows/test_integration.yml
+++ b/.github/workflows/test_integration.yml
@@ -55,6 +55,10 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install Poetry
         run: pip install poetry
+      - name: Print env vars
+        run: |
+          printenv
+          whoami
       - name: Install dependencies and run tests
         run: |
           export WM_PROJECT_DIR=/opt/openfoam10
