--- a/.github/workflows/test_integration.yml
+++ b/.github/workflows/test_integration.yml
@@ -49,19 +49,17 @@ jobs:
           poetry run pytest tests/integration/test_moose.py
   OpenFOAM:
     runs-on: ubuntu-latest
-    container:
-      image: ghcr.io/simvue-io/openfoam_example
     steps:
-      - uses: actions/checkout@v4
-      - name: Install Poetry
-        run: pip install poetry
-      - name: Print env vars
-        run: |
-          printenv
-          whoami
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Setup OpenFoam
+        uses: gerlero/setup-openfoam@v1
+        with:
+          openfoam-version: 2406
+      - name: Copy tutorial
+        run: cp -r $FOAM_TUTORIALS/incompressible/simpleFoam/airFoil2D integrations/examples/openfoam/airFoil2D
       - name: Install dependencies and run tests
         run: |
-          export WM_PROJECT_DIR=/opt/openfoam10
           export SIMVUE_URL=${{ secrets.SIMVUE_URL }}
           export SIMVUE_TOKEN=${{ secrets.SIMVUE_TOKEN }}
           poetry install -E test
