--- a/.github/workflows/test_integration.yml
+++ b/.github/workflows/test_integration.yml
@@ -58,6 +58,12 @@ jobs:
           openfoam-version: 2406
       - name: Copy tutorial
         run: cp -r $FOAM_TUTORIALS/incompressible/simpleFoam/airFoil2D $GITHUB_WORKSPACE/examples/openfoam/airFoil2D
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+      - name: Install poetry
+        run: python3 -m pip install poetry
       - name: Install dependencies and run tests
         run: |
           export SIMVUE_URL=${{ secrets.SIMVUE_URL }}
