--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,14 +13,15 @@ ukaea-multiparser = "^1.0.2"
 tensorflow = {version="^2.16.1", optional=true}
 mnist = {version="^0.2.2", optional=true}
 f90nml = {version = "^1.4.3", optional = true}
-pytest = {version = "^8.3.3", optional = true}
 matplotlib = {version = "^3.9.2", optional = true}
 
 [tool.poetry.extras]
 tensorflow = ["tensorflow", "mnist"]
 fds = ["f90nml"]
 plot = ["matplotlib"]
-test = ["pytest"]
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.3.3"
 
 [build-system]
 requires = ["poetry-core"]
