--- a/.github/workflows/test_integration.yml
+++ b/.github/workflows/test_integration.yml
@@ -43,6 +43,7 @@ jobs:
         run: python -m pip install poetry
       - name: Install dependencies and run tests
         run: |
+          export PATH=/opt/mpich/bin:$PATH
           export SIMVUE_URL=${{ secrets.SIMVUE_URL }}
           export SIMVUE_TOKEN=${{ secrets.SIMVUE_TOKEN }}
           poetry install --with dev
