--- a/.github/workflows/test_integration.yml
+++ b/.github/workflows/test_integration.yml
@@ -38,12 +38,16 @@ jobs:
     container:
       image: idaholab/moose:latest
     steps:
+      - name: Make new user
+        run: |
+          useradd -g root -m dev
+          su - dev
       - uses: actions/checkout@v4
       - name: Install poetry
         run: python -m pip install poetry
       - name: Install dependencies and run tests
         run: |
-          export PATH=/opt/mpich/bin:$PATH
+          export PATH=/opt/openmpi/bin:$PATH
           export SIMVUE_URL=${{ secrets.SIMVUE_URL }}
           export SIMVUE_TOKEN=${{ secrets.SIMVUE_TOKEN }}
           poetry install --with dev
