--- a/.github/workflows/test_integration.yml
+++ b/.github/workflows/test_integration.yml
@@ -38,21 +38,18 @@ jobs:
     container:
       image: idaholab/moose:latest
     steps:
-      - name: Make new user
+      - uses: actions/checkout@v4
+      - name: Install dependencies and run tests
         run: |
           useradd -g root -m dev
           su - dev
-      - uses: actions/checkout@v4
-      - name: Install poetry
-        run: python -m pip install poetry
-      - name: Install dependencies and run tests
-        run: |
+          python -m pip install poetry
           export PATH=/opt/openmpi/bin:$PATH
           export SIMVUE_URL=${{ secrets.SIMVUE_URL }}
           export SIMVUE_TOKEN=${{ secrets.SIMVUE_TOKEN }}
+          poetry install --with dev
           whoami
           pwd
-          poetry install --with dev
           poetry run pytest tests/integration/test_moose.py
   OpenFOAM:
     runs-on: ubuntu-latest
