Updated pre commit hooks

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,8 +7,25 @@ ci:
     skip: []
     submodules: false
 repos:
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.6.8
+    hooks:
+      - id: ruff
+        args:
+          - --fix
+          - --select=D,DOC
+          - --exit-non-zero-on-fix
+      - id: ruff-format
+
+  - repo: https://github.com/pycqa/isort
+    rev: 5.13.2
+    hooks:
+      - id: isort
+        name: isort (python)
+        args: ["--profile", "black"]
+
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v5.0.0
+    rev: v4.5.0
     hooks:
       - id: check-toml
       - id: check-yaml
@@ -22,12 +39,7 @@ repos:
       - id: no-commit-to-branch
         args: [--branch, main, --branch, dev]
       - id: check-added-large-files
-  - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.6.9
-    hooks:
-      - id: ruff
-        args: [ --fix, --exit-non-zero-on-fix, "--ignore=C901" ]
-      - id: ruff-format
+
   - repo: https://github.com/conorfalvey/check_pdb_hook
     rev: 0.0.9
     hooks:
@@ -35,7 +47,14 @@ repos:
         pass_filenames: false
 
   - repo: https://github.com/PyCQA/bandit.git
-    rev: 1.7.10
+    rev: 1.7.7
     hooks:
     -   id: bandit
         args: [-lll, --recursive, clumper]
+
+
+  - repo: https://github.com/jsh9/pydoclint
+    rev: 0.5.10
+    hooks:
+      - id: pydoclint
+        args: [--style=numpy, --allow-init-docstring=True]
