--- a/.github/workflows/test_windows.yml
+++ b/.github/workflows/test_windows.yml
@@ -15,7 +15,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  build:
+  build_windows:
 
     runs-on: windows-latest
     timeout-minutes: 30
