--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ include = ["extras/fds_unlim"]
 
 [tool.poetry.dependencies]
 python = ">=3.10,<3.13"
-simvue = {git = 'https://github.com/simvue-io/python-api.git', rev = 'wk9874/2.0.0_a3'}
+simvue = "2.0.0a3"
 ukaea-multiparser = "^1.0.2"
 tensorflow = {version="^2.16.1", optional=true}
 mnist = {version="^0.2.2", optional=true}
